sql/temporary_tables.cc
@@ -626,6 +626,9 @@ bool THD::drop_temporary_table(TABLE *table, bool *is_trans, bool delete_table)
   DBUG_PRINT("tmptable", ("Dropping table: '%s'.'%s'",
                           table->s->db.str, table->s->table_name.str));
 
+  // Close lookup_handler.
+  table->file->ha_reset();
+
   locked= lock_temporary_tables();
 
   share= tmp_table_share(table);
